<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myToolbar"
    android:layout_width="match_parent"
    android:layout_height="73dp"
    android:background="@color/yellow"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="73dp"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="end">

            <ImageButton
                android:id="@+id/profile_settings_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/setting_account_icon"
                android:scaleType="fitCenter"
                android:src="@drawable/settings_icon" />

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/developer_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/profile_developer_icon"
                android:scaleType="fitCenter"
                android:src="@drawable/account_circle_icon" />

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.Toolbar>
