<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/appbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_bakso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="227dp"
                        android:layout_height="105dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/letter_to_icon_bakso"
                            android:scaleType="centerCrop"
                            android:src="@drawable/baso_icon" />

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/description_baso"
                        android:textAlignment="center"
                        android:textColor="#777777"
                        android:textSize="14sp" />

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/letter_to_icon_love"
                        android:src="@drawable/favorit_fill_icon" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_ayam_geprek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <androidx.cardview.widget.CardView
                        android:layout_width="227dp"
                        android:layout_height="105dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/letter_to_icon_ayam_geprek"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ayam_geprek_icon" />

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/description_ayam_geprek"
                        android:textAlignment="center"
                        android:textColor="#777777"
                        android:textSize="14sp" />

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/letter_to_icon_not_love"
                        android:src="@drawable/favorite_border_icon" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_bubur_ayam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <androidx.cardview.widget.CardView
                        android:layout_width="227dp"
                        android:layout_height="105dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/letter_to_icon_bubur_ayam"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bubur_icon" />

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/description_bubur_ayam"
                        android:textAlignment="center"
                        android:textColor="#777777"
                        android:textSize="14sp" />

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/letter_to_icon_love"
                        android:src="@drawable/favorit_fill_icon" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_seblak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <androidx.cardview.widget.CardView
                        android:layout_width="227dp"
                        android:layout_height="105dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/letter_to_icon_seblak"
                            android:scaleType="centerCrop"
                            android:src="@drawable/seblak_icon" />

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/description_seblak"
                        android:textAlignment="center"
                        android:textColor="#777777"
                        android:textSize="14sp" />

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/letter_to_icon_love"
                        android:src="@drawable/favorit_fill_icon" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_ayam_penyet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <androidx.cardview.widget.CardView
                        android:layout_width="227dp"
                        android:layout_height="105dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/letter_to_icon_ayam_penyet"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ayam_penyet_icon" />

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/description_ayam_penyet"
                        android:textAlignment="center"
                        android:textColor="#777777"
                        android:textSize="14sp" />

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/letter_to_icon_not_love"
                        android:src="@drawable/favorite_border_icon" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_soto_ayam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <androidx.cardview.widget.CardView
                        android:layout_width="227dp"
                        android:layout_height="105dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/letter_to_icon_soto_ayam"
                            android:scaleType="centerCrop"
                            android:src="@drawable/soto_ayam_icon" />

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/description_soto_ayam"
                        android:textAlignment="center"
                        android:textColor="#777777"
                        android:textSize="14sp" />

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/letter_to_icon_love"
                        android:src="@drawable/favorit_fill_icon" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>